[BUG-1690] Add spacing between sidebar and catalogs

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -125,7 +125,7 @@
     flex: 0 0 75%;
     // gap: 1rem;
     column-gap: 2rem;
-    // justify-content: space-evenly;
+    justify-content: center;
     height: fit-content;
     padding-top: 1rem;
   }
